--- a/duties/templates/duties/index.html
+++ b/duties/templates/duties/index.html
@@ -31,5 +31,6 @@
   <main>{% block content %}{% endblock content %}</main>
   <script src="{% static 'duties/js/jquery-3.4.1.min.js' %}"></script>
   <script src="{% static 'duties/js/bootstrap.min.js' %}"></script>
+  <script src="{% static 'duties/js/script.js' %}"></script>
 </body>
 </html>
